--- a/CSS/external.css
+++ b/CSS/external.css
@@ -1,3 +1,10 @@
+body {
+    margin: 0 auto;
+}
+main {
+    background-color: #F9F6FD;
+    padding: 20px 40px;
+}
 .active {
     background-color: #371C63;
 }
@@ -14,8 +21,22 @@ nav a {
     font-family: 'Gagalin', cursive;
     text-decoration: none;
     font-size: 60px;
-    padding: 20px 45px;
+    padding: 20px 44px;
 }
 nav a:hover {
     background-color: #6B4FB4;
+}
+h1 {
+    text-align: center;
+    font-size: 100px;
+    font-family: 'Antic', sans-serif;
+}
+h2 {
+    font-size: 40px;
+}
+h3 {
+    font-size: 24px;
+}
+p {
+    font-size: 18px;
 }
