--- a/CSS/external.css
+++ b/CSS/external.css
@@ -5,6 +5,10 @@ main {
     background-color: #F9F6FD;
     padding: 20px 40px;
 }
+footer {
+    padding: 20px;
+    background-color: #F9F6FD;
+}
 .active {
     background-color: #371C63;
 }
@@ -30,6 +34,8 @@ h1 {
     text-align: center;
     font-size: 100px;
     font-family: 'Antic', sans-serif;
+    text-shadow: 2px 2px 4px black;
+    color: white;
 }
 h2 {
     font-size: 40px;
