--- a/CSS/external.css
+++ b/CSS/external.css
@@ -14,7 +14,7 @@ footer {
 }
 nav {
     display: flex;
-    flex: row wrap;
+    flex: row no-wrap;
     justify-content: space-evenly;
     align-items: center;
     background-color: #4B2E83;
@@ -24,7 +24,7 @@ nav a {
     color: #F9F6FD;
     font-family: 'Gagalin', cursive;
     text-decoration: none;
-    font-size: 60px;
+    font-size: 2rem;
     padding: 20px 44px;
 }
 nav a:hover {
