--- a/CSS/external.css
+++ b/CSS/external.css
@@ -32,17 +32,17 @@ nav a:hover {
 }
 h1 {
     text-align: center;
-    font-size: 100px;
+    font-size: 3.2rem;
     font-family: 'Antic', sans-serif;
     text-shadow: 2px 2px 4px black;
     color: white;
 }
 h2 {
-    font-size: 40px;
+    font-size: 2.4rem;
 }
 h3 {
-    font-size: 24px;
+    font-size: 2rem;
 }
 p {
-    font-size: 18px;
+    font-size: 1.6rem;
 }
