--- a/CSS/external.css
+++ b/CSS/external.css
@@ -21,6 +21,7 @@ nav {
 }
 nav a {
     color: #F9F6FD;
+    background-color: #371C63;
     font-family: 'Gagalin', cursive;
     text-decoration: none;
     font-size: 2.8rem;
