--- a/CSS/external.css
+++ b/CSS/external.css
@@ -11,21 +11,25 @@ footer {
 }
 .active {
     background-color: #371C63;
+    color: #F9F6FD;
 }
 nav {
+    background-color: #F9F6FD;
     display: flex;
     flex: row no-wrap;
-    justify-content: space-evenly;
+    justify-content:end;
     align-items: center;
     border: 1px solid #A18CD1;
+    padding: 20px;
 }
 nav a {
-    color: #F9F6FD;
-    background-color: #4B2E83;
+    color: #4B2E83;
     font-family: 'Gagalin', cursive;
     text-decoration: none;
-    font-size: 2.7rem;
-    padding: 20px 40px;
+    font-size: 2.8rem;
+    padding: 8px 12px;
+    margin: 15px;
+    border-radius: 12px;
 }
 nav a:hover {
     background-color: #6B4FB4;
@@ -45,4 +49,9 @@ h3 {
 }
 p {
     font-size: 1.6rem;
+}
+nav a img {
+    width: 100px;
+    height: auto;
+    transform: translate(-300px, 5px);
 }
