--- a/CSS/external.css
+++ b/CSS/external.css
@@ -66,11 +66,21 @@ p {
     font-size: 1.4rem;
     text-indent: 50px;
 }
-/*Gives footer 2px solid top border. Color is #4B2E83*/
+/*Gives footer 2px solid top border. Color is #4B2E83. Makes background color white*/
 footer {
     border-top: 2px solid #4B2E83;
+    background-color: white;
+}
+/*aligns footer text to center, and removes text decoration*/
+footer section {
+    text-align: center;
+    text-decoration: none;
 }
 /*Makes footer heading font color gray*/
 footer h4 {
     color:gray;
+}
+/*makes footer image width 40px*/
+footer img {
+    width: 40px;
 }
