--- a/CSS/external.css
+++ b/CSS/external.css
@@ -7,11 +7,26 @@ body {
 main {
     background-color: #F9F6FD;
     padding: 20px 40px;
-}
-/*Gives footer 20px padding, and a background color of #F9F6FD*/
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}/*Gives footer 2px solid top border. Color is #4B2E83. Makes background color white. Gives footer 20px padding*/
 footer {
     padding: 20px;
-    background-color: #F9F6FD;
+    border-top: 2px solid #4B2E83;
+    background-color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+/*aligns footer text to center, and removes text decoration*/
+footer section {
+    text-align: center;
+    text-decoration: none;
+}
+/*Makes footer heading font color gray*/
+footer h4 {
+    color:gray;
+}
+/*makes footer image width 40px*/
+footer img {
+    width: 40px;
 }
 /*GIves background color of #371C63, and font color of #F9F6FD to elements with class value as active*/
 .active {
@@ -65,22 +80,4 @@ h3 {
 p {
     font-size: 1.4rem;
     text-indent: 50px;
-}
-/*Gives footer 2px solid top border. Color is #4B2E83. Makes background color white*/
-footer {
-    border-top: 2px solid #4B2E83;
-    background-color: white;
-}
-/*aligns footer text to center, and removes text decoration*/
-footer section {
-    text-align: center;
-    text-decoration: none;
-}
-/*Makes footer heading font color gray*/
-footer h4 {
-    color:gray;
-}
-/*makes footer image width 40px*/
-footer img {
-    width: 40px;
 }
