--- a/CSS/external.css
+++ b/CSS/external.css
@@ -83,4 +83,18 @@ h3 {
 p {
     font-size: 1.4rem;
     text-indent: 50px;
+}table {
+width: 100%;
+margin-top: 20px;
+border-spacing: 10px;
+}
+td {
+padding: 10px;
+background-color: #e5dbf7;
+border-radius: 8px;
+}
+th {
+padding: 10%;
+background-color: #e5dbf7;
+border-radius: 8px;
 }
