--- a/CSS/external.css
+++ b/CSS/external.css
@@ -83,7 +83,8 @@ h3 {
 p {
     font-size: 1.4rem;
     text-indent: 50px;
-}table {
+}
+table {
 width: 100%;
 margin-top: 20px;
 border-spacing: 10px;
