--- a/CSS/external.css
+++ b/CSS/external.css
@@ -93,9 +93,11 @@ td {
 padding: 10px;
 background-color: #e5dbf7;
 border-radius: 8px;
+font-size: 1.4rem;
 }
 th {
 padding: 10%;
 background-color: #e5dbf7;
 border-radius: 8px;
+font-size: 1.4rem;
 }
