--- a/CSS/external.css
+++ b/CSS/external.css
@@ -95,6 +95,9 @@ background-color: #e5dbf7;
 border-radius: 8px;
 font-size: 1.4rem;
 }
+td img {
+    width: 5%;
+}
 th {
 padding: 10%;
 background-color: #e5dbf7;
