--- a/CSS/external.css
+++ b/CSS/external.css
@@ -47,11 +47,11 @@ nav {
     border: 1px solid #A18CD1;
     padding: 20px;
 }
-/*Gives nav links font color of #4B2E83, font-family cursive/sans-serif, no text decoration, font size is 2.2rem, top and bottom padding is 8px,
+/*Gives nav links font color of #4B2E83, font-family cursive, no text decoration, font size is 2.2rem, top and bottom padding is 8px,
 left and right padding is 12px, 15px margin, and 12px border radius*/
 nav a {
     color: #4B2E83;
-    font-family: 'Gagalin', cursive, sans-serif;
+    font-family: 'Gagalin', cursive;
     text-decoration: none;
     font-size: 2.2rem;
     padding: 8px 12px;
