--- a/CSS/external.css
+++ b/CSS/external.css
@@ -93,12 +93,13 @@ td {
     background-color: #e5dbf7;
     border-radius: 8px;
     font-size: 1.4rem;
+    text-align: center;
 }
 td img {
-    width: 50%;
+    width: 90%;
 }
 th {
-    padding: 10%;
+    padding: 5%;
     background-color: #e5dbf7;
     border-radius: 8px;
     font-size: 1.4rem;
