--- a/CSS/external.css
+++ b/CSS/external.css
@@ -31,6 +31,9 @@ footer h4 {
 footer img {
     width: 40px;
 }
+footer p {
+    font-size: 1rem;
+}
 /*GIves background color of #371C63, and font color of #F9F6FD to elements with class value as active*/
 .active {
     background-color: #371C63;
